# wslarc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs
src/commands/: attach.rs  hook_sync_systemd.rs  init.rs  mod.rs  mount.rs  restore.rs  snapshot.rs  status.rs  unmount.rs
src/generators/: btrbk.rs  ext4_sync.rs  mod.rs  systemd.rs
src/utils/: cli.rs  mod.rs  prompt.rs  shell.rs
