[package]
name = "wslarc"
version = "0.1.0"
edition = "2021"
description = "WSL2 Btrfs backup and restore tool"
license = "MIT"
repository = "https://github.com/specter119/wslarc"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
dialoguer = "0.11"
console = "0.15"
log = "0.4"
env_logger = "0.11"
rust-ini = "0.21"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
